--- a/navbaar/sign.html
+++ b/navbaar/sign.html
@@ -31,7 +31,7 @@
             <br>
             <div class="user-box2">
                 <label for="contact"><b>Contact</b></label>
-                <input type="text" placeholder="" name="name" required>
+                <input type="text" placeholder="" name="contact" required>
             </div>
             <br>
             <div class="user-box3">
@@ -40,8 +40,13 @@
             </div>
             <br>
             <div class="user-box4">
-            <label for="email"><b>Password</b></label>
-            <input type="text" placeholder="" name="email" required>
+            <label for="pass"><b>Password</b></label>
+            <input type="text" placeholder="" name="password" required>
+            </div>
+            <br>
+            <div class="user-box5">
+            <label for="cnf pass"><b>Confirm <br>Password</b></label>
+            <input type="text" placeholder="" name="cnf pass" required>
             </div>
         </form>
         <button class="signinbtn">Signin</button>
