--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -9,11 +9,11 @@
     <!-- ===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>wepage</title>
 </head>
 
-<body style="background-color: teal;">
+<body style="background-color: paleturquoise;">
     <nav>
         <!-- <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen'></i>
@@ -24,8 +24,11 @@
                     <i class='bx bx-x siderbarClose'></i>
                 </div>  -->
 
-               
+                
         <ul class="nav-links">
+            <div class="logo">
+            <img src="https://t3.ftcdn.net/jpg/05/77/20/74/360_F_577207418_P0Encjx9fMSDffn9MlIh1Ir0piJJwfkZ.jpg" alt="Logo">
+        </div>
             <li><a href="./nav.html">Home</a></li>
             <li><a href="./collection.html">Collection</a></li>
             <li><a href="./about.html">About</a></li>
@@ -38,6 +41,7 @@
     <marquee behaviour="scroll" direction="left" scrollamount="15">
         <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
     </marquee>
+
     <div class="divv">
         <div style="display: flex; gap: 30px;">
             <div>
@@ -49,6 +53,7 @@
                     DECORATIVE FLOWER VASES FOR
                     YOUR DREAM SPACE.....
                 </h2>
+                <!-- flip images 1 -->
                 <div style="display: flex; gap: 30px;">
                     <div class="flip-box">
                         <div class="flip-box-inner">
@@ -60,7 +65,7 @@
                             </div>
                         </div>
                     </div>
-
+                    <!--   flip images 2 -->
                     <div class="flip-box2">
                         <div class="flip-box-inner2">
                             <div class="flip-box-front2">
@@ -72,18 +77,12 @@
                         </div>
                     </div>
                 </div>
-                <!-- <marquee behaviour="scroll" direction="right" scrollamount="15">
-                    <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
-                </marquee>
-                <marquee behaviour="scroll" direction="left" scrollamount="15">
-                    <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
-                </marquee> -->
             </div>
         </div>
         <br>
         <button class="shopbtn"><a href="./collection.html">Go to shop</a></button>
 
-       <!-- =========================footer========================= -->
+        <!-- =========================footer========================= -->
         <footer>
             <div class="foot-panel1">
             </div>
